tests/interpreter/binary-expression-add-bad-types.stderr
error: cannot add 'Number' to 'String'
 --> $DIR/binary-expression-add-bad-types.lox:1:1
  |
1 | 10 + "foo";
  | ^^^^^^^^^^
